--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <p>第一下一定要user自己點播放鍵，螢幕需要保持開啟</p>
     <div id="orientationData"></div>
-    <audio controls src="./GI-DLE-SuperLady.mp3" id="myAudio"></audio>
+    <audio controls src="./audio.mp3" id="myAudio"></audio>
     <script>
       let audio = document.getElementById("myAudio");
 
